[package]
name = "metal_search_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
serde_json = "1.0.89"
serde = { version = "1.0.147", features = ["derive"] }
regex = "1.7.0"